--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="./src/assets/guide-icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <meta property="og:title" content="Gerenciamento de tarefas">
+  <meta property="og:description" content="Projeto que gerencia tarefas">
+  <meta property="og:image" content="https://icons.veryicon.com/png/o/miscellaneous/standard/task-32.png">
+
   <title>Gerenciamento de tarefas</title>
 </head>
 
